# mmCoreAndDevices

./: .gitignore  .gitmodules  .travis.yml  CLAUDE.md  CMakeLists.txt  LICENSE  LICENSE.txt  Makefile.am  README.md  arduino_test_4channe_copy_20241120151555.ino  autogen.sh  building-cpp.md  camera_triggering_API.md  camera_triggering_API_v2.md  configure.ac  justfile  meson.build  meson_options.txt  micromanager.sln  micromanagerSD.slnf  mm-storage.slnf  secret-device-adapters-checkout.sh  secret-device-adapters-commit
DeviceAdapters/: CMakeLists.txt  Makefile.am  _ADAPTERS_NOT_IN_BUILD.txt  configure.ac
DeviceAdapters/3Z_Optics/: 3Z_Optics.cpp  3Z_Optics.h  3Z_Optics.vcxproj  3Z_Optics.vcxproj.filters
DeviceAdapters/89NorthLDI/: 89North_LDI.vcxproj  LDI.cpp
DeviceAdapters/AAAOTF/: AAAOTF.cpp  AAAOTF.h  AAAOTF.vcxproj  AAAOTF.vcxproj.filters
DeviceAdapters/ABS/: ABSCamera.cpp  ABSCamera.h  ABSCamera.vcxproj  ABSCamera.vcxproj.filters  ABSDelayLoadDll.h  AutoTimeMeasure.h  CcmFileStd.cpp  ImageHeader.cpp  MemoryIniFile.cpp  TimeSpanPC.h  abscommontools.cpp  abscommontools.h  absdelayloaddll.cpp  dllmain.cpp
DeviceAdapters/AMF/: AMF.vcxproj  AMF.vcxproj.filters  AMF_Commands.h  AMF_Hub.cpp  AMF_Hub.h  AMF_LSP_Hub.cpp  AMF_LSP_Hub.h  AMF_LSP_Pump.cpp  AMF_LSP_Pump.h  AMF_RVM.cpp  AMF_RVM.h
DeviceAdapters/AOTF/: AOTF.cpp  AOTF.vcxproj  build.xml
DeviceAdapters/ASIFW1000/: ASIFW1000.cpp  ASIFW1000.h  ASIFW1000.vcxproj  ASIFW1000.vcxproj.filters  ASIFW1000Hub.cpp  ASIFW1000Hub.h
DeviceAdapters/ASIStage/: ASIBase.cpp  ASIBase.h  ASICRIF.cpp  ASICRIF.h  ASICRISP.cpp  ASICRISP.h  ASILED.cpp  ASILED.h  ASIMagnifier.cpp  ASIMagnifier.h  ASIStage.cpp  ASIStage.h  ASIStage.vcxproj  ASIStage.vcxproj.filters  ASIStateDevice.cpp  ASIStateDevice.h  ASITIRF.cpp  ASITIRF.h  ASITurret.cpp  ASITurret.h  ASIXYStage.cpp  ASIXYStage.h  ASIZStage.cpp  ASIZStage.h  Makefile.am  license.txt
DeviceAdapters/ASITiger/: ASIBase.h  ASICRISP.cpp  ASICRISP.h  ASIClocked.cpp  ASIClocked.h  ASIDac.cpp  ASIDac.h  ASIDacXYStage.cpp  ASIDacXYStage.h  ASIFWheel.cpp  ASIFWheel.h  ASIHub.cpp  ASIHub.h  ASILED.cpp  ASILED.h  ASILens.cpp  ASILens.h  ASIPLogic.cpp  ASIPLogic.h  ASIPeripheralBase.h  ASIPiezo.cpp  ASIPiezo.h  ASIPmt.cpp  ASIPmt.h  ASIScanner.cpp  ASIScanner.h  ASITiger.cpp  ASITiger.h  ASITiger.vcxproj  ASITiger.vcxproj.filters  ASITigerComm.cpp  ASITigerComm.h  ASIXYStage.cpp  ASIXYStage.h  ASIZStage.cpp  ASIZStage.h  Makefile.am
DeviceAdapters/ASIWPTR/: ASIwptr.vcxproj  ASIwptr.vcxproj.filters  wptr.cpp  wptr.h
DeviceAdapters/AcquireZarr/: AcqZarrAdapter.cpp  AcqZarrAdapter.h  AcqZarrStorage.cpp  AcquireZarr.vcxproj  AcquireZarr.vcxproj.filters
DeviceAdapters/AgilentLaserCombiner/: AgilentLaserCombiner.cpp  AgilentLaserCombiner.h  AgilentLaserCombiner.vcxproj  AgilentLaserCombiner.vcxproj.filters  build.xml
DeviceAdapters/Aladdin/: Aladdin.cpp  Aladdin.h  Aladdin.vcxproj  Aladdin.vcxproj.filters
DeviceAdapters/AlliedVisionCamera/: AlliedVisionCamera.cpp  AlliedVisionCamera.h  AlliedVisionCamera.vcxproj  AlliedVisionCamera.vcxproj.filters  AlliedVisionDeviceBase.cpp  AlliedVisionDeviceBase.h  AlliedVisionHub.cpp  AlliedVisionHub.h  Makefile.am  PropertyItem.cpp  PropertyItem.h  license.txt
DeviceAdapters/AmScope/: AmScope.cpp  AmScope.h  AmScope.vcxproj  Readme.txt  SequenceThread.cpp
DeviceAdapters/Andor/: Andor.cpp  Andor.h  Andor.vcxproj  Andor.vcxproj.filters  ReadModeControl.cpp  ReadModeControl.h  SRRFAndorCamera.cpp  SRRFAndorCamera.h  SRRFCamera.h  SRRFControl.cpp  SRRFControl.h  SpuriousNoiseFilterControl.cpp  SpuriousNoiseFilterControl.h  build.xml
DeviceAdapters/AndorLaserCombiner/: AndorLaserCombiner.cpp  AndorLaserCombiner.h  AndorLaserCombiner.vcxproj  CMakeLists.txt  build.xml
DeviceAdapters/AndorSDK3/: AOIProperty.cpp  AOIProperty.h  AndorSDK3.cpp  AndorSDK3.h  AndorSDK3.vcxproj  AndorSDK3.vcxproj.filters  AndorSDK3Strings.h  BooleanProperty.cpp  BooleanProperty.h  BooleanPropertyWithPoiseControl.cpp  BooleanPropertyWithPoiseControl.h  CallBackManager.cpp  EnumProperty.cpp  EnumProperty.h  EventsContainer.h  EventsManager.cpp  EventsManager.h  EventsManagerHelper.h  ExposureProperty.cpp  ExposureProperty.h  FloatProperty.cpp  FloatProperty.h  IProperty.h  IntegerProperty.cpp  IntegerProperty.h  Makefile.am  SRRFAndorSDK3Camera.cpp  SnapShotControl.cpp  SnapShotControl.h  atcore++.h  atunpacker.h  atutility.h  stdafx.h
DeviceAdapters/AndorShamrock/: AndorShamrock.cpp  AndorShamrock.h  AndorShamrock.vcxproj  AndorShamrock.vcxproj.filters  ModuleAPIFunctions.cpp  ModuleAPIFunctions.h  SharedConstants.h
DeviceAdapters/Apogee/: Apogee.cpp  Apogee.h  Apogee.vcxproj
MMCore/: AppleHost.h  AttachedStorageThread.cpp  AttachedStorageThread.h  BufferAdapter.cpp  BufferAdapter.h  BufferDataPointer.h  BufferManager.cpp  BufferManager.h  Buffer_v2.cpp  Buffer_v2.h  CMakeLists.txt  CircularBlockCollection.cpp  CircularBlockCollection.h  CircularBuffer.cpp  CircularBuffer.h  ConfigGroup.h  Configuration.cpp  Configuration.h  CoreCallback.cpp  CoreCallback.h  CoreDeclHelpers.h  CoreFeatures.cpp  CoreFeatures.h  CoreProperty.cpp  CoreProperty.h  CoreUtils.h  DeviceManager.cpp  DeviceManager.h  Error.cpp  Error.h  ErrorCodes.h  FrameBuffer.cpp  FrameBuffer.h  Host.cpp  Host.h  ImageMetadata.h  LogLevel.h  LogManager.cpp  LogManager.h  MMCore.cpp  (+30 more)
MMCoreJ_wrap/: .gitignore  MMCoreJ.i  MMCoreJ_wrap.cxx  MMCoreJ_wrap.h  MMCoreJ_wrap.vcxproj  MMCoreJ_wrap.vcxproj.filters  Makefile.am  README.md  build.xml  meson.build  meson_options.txt  pom.xml
MMDevice/: CMakeLists.txt  CameraImageMetadata.h  Debayer.cpp  Debayer.h  DeviceBase.h  DeviceThreads.h  DeviceUtils.cpp  DeviceUtils.h  ImageMetadata.h  ImgBuffer.cpp  ImgBuffer.h  MMDevice-SharedRuntime.vcxproj  MMDevice-SharedRuntime.vcxproj.filters  MMDevice-StaticRuntime.vcxproj  MMDevice-StaticRuntime.vcxproj.filters  MMDevice.cpp  MMDevice.h  MMDeviceConstants.h  Makefile.am  ModuleInterface.cpp  ModuleInterface.h  Property.cpp  Property.h  README.md  RegisteredDeviceCollection.h  meson.build  meson_options.txt
(+2960 files in other folders)
