option('client_interface', type: 'boolean', value: false,
    description: 'Build for use by MMCore, as opposed to by a device adapter',
)
option('tests', type: 'feature', value: 'auto', yield: true,
    description: 'Build unit tests',
)
option('docs', type: 'feature', value: 'auto', yield: true,
    description: 'Build API documentation',
)
option('docs_werror', type: 'boolean', value: true,
    description: 'Treat Doxygen warnings as errors',
)
