AM_CXXFLAGS = $(MMDEVAPI_CXXFLAGS)
deviceadapter_LTLIBRARIES = libmmgr_dal_ASIStage.la
libmmgr_dal_ASIStage_la_SOURCES = \
	ASIBase.cpp \
	ASIBase.h \
	ASICRIF.cpp \
	ASICRIF.h \
	ASICRISP.cpp \
	ASICRISP.h \
	ASILED.cpp \
	ASILED.h \
	ASIMagnifier.cpp \
	ASIMagnifier.h \
	ASIStage.cpp \
	ASIStage.h \
	ASIStateDevice.cpp \
	ASIStateDevice.h \
	ASITIRF.cpp \
	ASITIRF.h \
	ASITurret.cpp \
	ASITurret.h \
	ASIXYStage.cpp \
	ASIXYStage.h \
	ASIZStage.cpp \
	ASIZStage.h
libmmgr_dal_ASIStage_la_LIBADD = $(MMDEVAPI_LIBADD)
libmmgr_dal_ASIStage_la_LDFLAGS = $(MMDEVAPI_LDFLAGS)

EXTRA_DIST = ASIStage.vcproj license.txt
